[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2"
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.86"
serde_json = "1.0.139"
jsonwebtoken = "9.3.1"
thiserror = "2.0.11"
sqlx = {version="0.8.3", features=["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
sqlx-cli = "0.8.3"
uuid = { version = "1.14.0",  features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
dotenv = "0.15.0"
chrono = {version="0.4.39", features=["serde"]}
anyhow = "1.0.96"
check = "1.0.0"
clerk-rs = { version = "0.4.1", features = ["axum"] }
headers = "0.4.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }


