[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2"
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1.86"
serde_json= { version = "1.0.139", features = ["raw_value"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.11"
sqlx = {version="0.8.3", features=["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
sqlx-cli = "0.8.3"
uuid = { version = "1.14.0",  features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
dotenv = "0.15.0"
chrono = {version="0.4.39", features=["serde"]}
anyhow = "1.0.96"
check = "1.0.0"
headers = "0.4.0"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }

# OAuth and JWT dependencies
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.20"


